moved output.css to main folder

--- a/main/index2.html
+++ b/main/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Diwali Meri Chamak Challo</title>
-    <link rel="stylesheet" href="../src/output.css">
+    <link rel="stylesheet" href="output.css">
 </head>
 <body class="bg-[#087E8B] grid place-content-center h-[100vh]">
     <h3 id="click" class="text-center md:hidden font-semibold text-xl 
