--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Diwali Chamak Challo</title>
-    <link rel="stylesheet" href="../src/output.css">
+    <link rel="stylesheet" href="output.css">
 </head>
 <body class="bg-[#B33C86]">
       <div class="container flex flex-col items-center">
